# lnkdin2pdf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _release_notes.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: changelog.yml  lint.yml  pre-release.yml  release.yml
pdf/: generator.py
scraper/: linkedin_scraper.py
templates/: post_template.html
utils/: logger.py  validators.py
